// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders without credits 1`] = `
<View>
  <View>
    <Text>
      Some caption text goes in here
    </Text>
  </View>
</View>
`;

exports[`2. renders with credits 1`] = `
<View>
  <View>
    <Text>
      Some caption text goes in here
    </Text>
    <Text>
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`3. renders with credits only 1`] = `
<View>
  <View>
    <Text>
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`4. renders a child 1`] = `
<View>
  <Text>
    Hello world!
  </Text>
  <View>
    <Text>
      Some caption text goes in here
    </Text>
    <Text>
      JUST CREDITS
    </Text>
  </View>
</View>
`;
